--- a/style.css
+++ b/style.css
@@ -39,13 +39,14 @@ opacity:0.4;
 }
 
 .accessGranted{
-	position:absolute;
-	top:200px;
+	position:fixed;
+	z-index:9998;
+	top:300px;
 	background:#333;
 	padding:20px;
 	border:1px solid #999;
-	width:300px;
-	left:50%;
+	width:500px;
+	left:41%;
 	margin-left:-150px;
 	text-align:center;
 }
